# manymouse_osc

./: CMakeLists.txt  README.md
include/: manymouse.h
src/: argparse.c  main.c  manymouse.c
